--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -1,9 +1,9 @@
 .container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  min-height: 100vh;
+  // display: flex;
+  // flex-direction: column;
+  // align-items: center;
+  // justify-content: center;
+  // min-height: 100vh;
 }
 
 .main {
