--- a/styles/Feed.module.scss
+++ b/styles/Feed.module.scss
@@ -11,13 +11,14 @@
   }
 }
 
-@media only screen and (min-width: 1300px) {
+@media only screen and (min-width: 1100px) {
   .main {
     grid-template-columns: repeat(3, minmax(0, 1fr));
     max-width: 72rem;
   }
 }
-
-.storiesWrapper {
-  grid-column: span 2 / span 2;
+@media only screen and (min-width: 1000px) {
+  .storiesWrapper {
+    grid-column: span 2 / span 2;
+  }
 }
